deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: webapp
        image: webapp:0.0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 30
          periodSeconds: 10
          failureThreshold: 3
